# opds

./: Cargo.toml  LICENSE
docs/: README.md
src/: errors.rs  events.rs  list.rs  logger.rs  main.rs  opds.rs
src/list/: book.rs  item.rs  mod.rs
src/widgets/: details.rs  help.rs  logs.rs  mod.rs
