[package]
name = "opds"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"
rust-version = "1.70"

[dependencies]
atom_syndication = "0.12"
thiserror = "1.0"
url = "2.2"

[dependencies.attohttpc]
version = "0.28"
features = ["basic-auth"]

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.log]
version = "0.4"
features = ["std"]

[dependencies.tui]
package = "ratatui"
version = "0.27"
features = ["termion"]
