[package]
name = "opds"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"
license = "MIT"

[dependencies]
atom_syndication = "0.12"
ratatui_simple_logger = "0.1"
thiserror = "2.0"
url = "2.2"

[dependencies.attohttpc]
version = "0.28"
features = ["basic-auth"]

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.log]
version = "0.4"
features = ["std"]

[dependencies.tui]
package = "ratatui"
version = "0.29"
features = ["termion"]
